--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.4
   http: ^0.13.5
   lottie: ^1.4.3
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
