--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^0.13.5
   lottie: ^1.4.3
   qr_code_scanner: ^1.0.1
+  get_it: ^7.2.0
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
