--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   get_it: ^7.2.0
   fluttertoast: ^8.1.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
